# nova-autoreset-event

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs  linux.rs  macos.rs  pipe.rs  windows.rs
tests/: autoreset_event.rs
